--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -254,6 +254,7 @@ body {
     text-align: center;
     color: #373a36;
     box-sizing: border-box;
+    overflow-y: visible;
 }
 
 .LandingPage__descriptOne, .LandingPage__descriptTwo {
@@ -274,7 +275,7 @@ body {
 }
 
 .Dashboard {
-    padding-top: 4.5rem;
+    padding-top: 5rem;
 }
 
 .Nav__HeaderNotIn {
@@ -679,6 +680,10 @@ h4 {
 .fa-trash-alt:hover {
     color: #d11a2a;
     cursor: pointer;
+}
+
+.fa-home {
+    margin-right: 0.4rem;
 }
 
 #main-menu-close {
