minor change to landing page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1393,6 +1393,10 @@ h3 a {
         margin-right: 1.5rem;
     }
 
+    .LandingPage__descriptTwo:last-of-type {
+        margin-right: 0;
+    }
+
     .MyProfile, .MemberProfiles {
         margin-top: 4rem;
     }
